# CSC621_TeamSky

./: .gitignore  README.md
Examples/: ir.py
Source/: CMakeLists.txt  ImageRegistrationMethod.cxx  ImageRegistrationMethod.h  LandmarkBasedTransformInitializer.cxx  ReadDicom.cxx  SmoothingFilters.cxx  SmoothingFilters.h  TeamSky.cxx  TileFilter.cxx  TileFilter.h  WarpImageFilter.cxx  WatershedSegmentation.cxx  WatershedSegmentation.h
result files and apllication/: deformation.mhd  deformation.raw
